<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff" >

    <RelativeLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#f8f8f8" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/login_title"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/topMenuBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/topMenu"
        android:background="#bbbbbb" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/topMenuBorder" >

        <RelativeLayout
            android:id="@+id/content_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="25sp" >
            </TextView>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/app_name"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10sp"
                android:paddingRight="10sp" >
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/etEmail"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:paddingLeft="10sp"
                android:paddingRight="10sp" >
            </EditText>

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/etPassword"
                android:layout_marginTop="15dp"
                android:text="@string/txtRememberMe" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etPassword"
                android:layout_marginTop="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/txtLogin" />

            <!-- Link to Forget pass Screen -->

            <Button
                android:id="@+id/btnFrogetPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/txtForgetPassword"
                android:textColor="#21dbd4"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegisterd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnFrogetPassword"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/txtRegisterd"
                android:textColor="#21dbd4"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>