<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/imageUploadDialog" >

        <TextView
            android:id="@+id/tvSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tvSelectImage_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:text="@string/tvSelectImage"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@+id/tvSelectImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:text="@string/camera" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@+id/btnCamera"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:layout_below="@+id/btnGallery"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>